Fixed Clipping Of Username
Fixed the issue of username Showing under profile picture (causing the mute, deafen and settings buttons outside the box

--- a/base.css
+++ b/base.css
@@ -3199,7 +3199,6 @@
 
 .panels-3wFtMD .avatarWrapper-1B9FTW {
     max-width: calc(100% - 4px);
-    min-width: calc(100% - 4px);
 }
 
 /* Normal Status Picker */
